tests/NormalTests/paczka1/small_fuzzy/51029438.err
Error in line 1: zK3 S199 61,2
Error in line 8: S507 A705 -1,7
Error in line 9: G6ndcg74P S199 33,2
Error in line 15: G6ndcg74P S199 72,9
